ADD shop section

--- a/src/content/pages/shop.njk
+++ b/src/content/pages/shop.njk
@@ -120,14 +120,68 @@ permalink: /shop.html
         </div>
     </div>
 
-    <div class="s-section s-section__green s-section__end">
-        <div class="s-section__number">
-            <p>01</p>
+    <div class="s-section s-section__green">
+        <div class="s-section__number number--hide">
+            <p></p>
         </div>
         <div class="s-section__content">
             <h1 class="s-section__title">
                 Ardennes
             </h1>
+            <div class="firstsection__year">
+                <h2 class="firstsection__yearA"> 20 </h2>
+                <div>
+                    <h3 class="firstsection__yearB"> 20 </h3>
+                </div>
+            </div>
+            <div class="firstsection__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit. Etiam dapibus, ante at varius condimentum, quam odio aliquam lectus, nec varius odio orci at massa. Phasellus turpis turpis, hendrerit at pharetra sed, dapibus ut odio. <br><br> Nullam congue leo ut libero aliquam commodo. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. </p>
+                <p class="firstsection__text-link">>>></p>
+            </div>
+        </div>
+        <div class="s-section__content cardsection slideFromTop">
+            <div class="learn__card">
+                <h2 class="learn__title">Our cultur.</h2>
+                <input type="checkbox" id="cultur" class="learn__input" checked>
+                <div open class="learn__details">
+                    <div class="learn__summary anim__backgroundimg">
+                        <label for="cultur" class="learn__label">
+                            <img src="../../assets/img/Mate_Star_Green.svg" alt="">
+                        </label>
+                    </div>
+                    <p class="learn__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.
+                        Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. 
+                        Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.
+                        Nullam congue leo ut libero aliquam commodo.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="s-section__content cardsection slideFromBottom">
+                    <div class="learn__card">
+                <h2 class="learn__title">We focus on quality.</h2>
+                <input type="checkbox" id="quality" class="learn__input" checked>
+                <div open class="learn__details">
+                    <div class="learn__summary anim__backgroundimg" style="background-image: url(../../assets/img/ardennesQuality.JPG)">
+                        <label for="quality" class="learn__label">
+                            <img src="../../assets/img/Mate_Star_Green.svg" alt="">
+                        </label>
+                    </div>
+                    <p class="learn__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.
+                        Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. 
+                        Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.
+                        Nullam congue leo ut libero aliquam commodo.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="s-section__content learnmore anim__backgroundimg">
+            <div class="learnmore__button">
+                <p>Learn More</p>
+                <img src="../../assets/img/Mate_Star_Green.svg" alt="">
+            </div>
         </div>
     </div>
 
