--- a/src/content/pages/about.njk
+++ b/src/content/pages/about.njk
@@ -17,7 +17,7 @@ permalink: /about.html
                 <p class="au__subtitle au__value__subtitle slideRightInit">Our Values</p>
             </div>
             <div class="au__value__text-container">
-                <p class="au__text au__value__text slideRightInit2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit. 
+                <p class="au__text au__value__text slideRightInit">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit. 
                     Etiam dapibus, ante at varius condimentum, quam odio aliquam lectus, nec varius odio orci at massa. Phasellus turpis turpis, hendrerit at pharetra sed, dapibus ut odio.</p>
             </div>
             <div class="aboutus__list-container">
@@ -43,44 +43,46 @@ permalink: /about.html
     <div class="s-section">
         <div class="s-section__content au__concept__section">
             <div class="au__concept__title-container">
-                <h1 class="section__title au__concept__title">
+                <h1 class="section__title au__concept__title ">
                     Concept
                 </h1>
             </div>
 
-            <div class="au__conceptA">
+            <div class="au__concept">
                 <div class="au__concept__subtitle-container">
-                    <p class="au__subtitle au__concept__subtitle">What is Mate?</p>
+                    <p class="au__subtitle au__concept__subtitle slideRightInit">What is Mate?</p>
                 </div>
                 <div class="au__concept__text-container">
-                    <p class="au__text au__concept__text">We are a brand disguised by a false movie studio. Our goal is to allow our buyer to feel part of not only a place, but a time. We recognise that nostalgia is a strong feeling we can tap into by releasing stunning clothing pieces.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit.
+                    <p class="au__text au__concept__text slideRightInit">We are a brand disguised by a false movie studio. Our goal is to allow our buyer to feel part of not only a place, but a time. We recognise that nostalgia is a strong feeling we can tap into by releasing stunning clothing pieces.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit. <br>
                         Etiam dapibus, ante at varius condimentum, quam odio aliquam lectus, nec varius odio orci at massa. Phasellus turpis turpis, hendrerit at pharetra sed, dapibus ut odio.
                 
                         Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.</p>
                 </div>
             </div>
-            <div class="au__conceptB">
+            <div class="au__concept">
                 <div class="au__concept__subtitle-container">
-                    <p class="au__subtitle au__concept__subtitle">Who is Mate?</p>
+                    <p class="au__subtitle au__concept__subtitle slideRightInit">Who is Mate?</p>
                 </div>
                 <div class="au__concept__text-container">
-                    <p class="au__text au__concept__text">We are a brand disguised by a false movie studio. Our goal is to allow our buyer to feel part of not only a place, but a time. We recognise that nostalgia is a strong feeling we can tap into by releasing stunning clothing pieces.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit.
+                    <p class="au__text au__concept__text slideRightInit">We are a brand disguised by a false movie studio. Our goal is to allow our buyer to feel part of not only a place, but a time. We recognise that nostalgia is a strong feeling we can tap into by releasing stunning clothing pieces.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit. <br>
                         Etiam dapibus, ante at varius condimentum, quam odio aliquam lectus, nec varius odio orci at massa. Phasellus turpis turpis, hendrerit at pharetra sed, dapibus ut odio.
                 
                         Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.</p>
                 </div>
             </div>
 
-            <div class="au__learnmore">
-                <div class="au__learnmore__subtitle-container">
-                    <p class="au__subtitle au__learnmore__subtitle">See for yourself!</p>
-                </div>
-                <div class="au__learnmore__button-container">
-                    <div class="learnmore__button au__learnmore__button">
-                        <p>Ard. 2020</p>
-                        <img src="../../assets/img/Mate_Star.svg" alt="">
+            <div class="au__learnmore-container">
+                <div class="au__learnmore slideRightInit">
+                    <div class="au__learnmore__subtitle-container">
+                        <p class="au__subtitle au__learnmore__subtitle">See for yourself!</p>
+                    </div>
+                    <div class="au__learnmore__button-container">
+                        <div class="learnmore__button au__learnmore__button">
+                            <p>Ard. 2020</p>
+                            <img src="../../assets/img/Mate_Star.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -88,7 +90,7 @@ permalink: /about.html
     </div>
 
     <div class="s-section s-section__green">
-        <div class="au__team__title-container">
+        <div class="s-section__content au__team__title-container">
             <h1 class="section__title au__team__title">
                 The
             </h1>
@@ -96,11 +98,11 @@ permalink: /about.html
                 Team
             </h1>
             <div class="au__team__text-container">
-                <p class="au__text au__team__text">Mate was entirely created by 4 graphic design students from Belgium. Each with their own strengths, were able to put together what you see and wear. <br> <br>Here they are.</p>
+                <p class="au__text au__team__text slideRightInit">Mate was entirely created by 4 graphic design students from Belgium. Each with their own strengths, were able to put together what you see and wear. <br> <br>Here they are.</p>
             </div>
         </div>
         <div class="au__teamMember-container">
-            <div class="au__teamMember">
+            <div class="au__teamMember slideFromBottom">
                 <div class="au__teamMember__name">
                     <h1 class="au__subtitle">Elann Fraiture</h1>
                 </div>
@@ -117,7 +119,7 @@ permalink: /about.html
             </div>
         </div>
         <div class="au__teamMember-container">
-            <div class="au__teamMember">
+            <div class="au__teamMember slideFromBottom">
                 <div class="au__teamMember__name">
                     <h1 class="au__subtitle">Elann Fraiture</h1>
                 </div>
@@ -134,7 +136,7 @@ permalink: /about.html
             </div>
         </div>
         <div class="au__teamMember-container">
-            <div class="au__teamMember">
+            <div class="au__teamMember slideFromBottom">
                 <div class="au__teamMember__name">
                     <h1 class="au__subtitle">Elann Fraiture</h1>
                 </div>
@@ -151,7 +153,7 @@ permalink: /about.html
             </div>
         </div>
         <div class="au__teamMember-container">
-            <div class="au__teamMember">
+            <div class="au__teamMember slideFromBottom">
                 <div class="au__teamMember__name">
                     <h1 class="au__subtitle">Elann Fraiture</h1>
                 </div>
