--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -145,20 +145,22 @@ permalink: /index.html
                 About Us
             </h1>
             <p class="aboutus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. <br> <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. </p>
-            <ul class="aboutus__list">
-                <li class="aboutus__item">
-                        <h2 class="aboutus__value__title">Quality</h2>
-                        <p class="aboutus__value__text">We focus on quality because we consider it to be extremely important. By ensuring this, we are confident that our products will live longer than any ordinary products. By lasting longer, our fabric will keep you warm longer. It's up to you.</p>
-                </li>
-                <li class="aboutus__item">
-                        <h2 class="aboutus__value__title">Ecology</h2>
-                        <p class="aboutus__value__text">We focus on quality because we consider it to be extremely important. By ensuring this, we are confident that our products will live longer than any ordinary products. By lasting longer, our fabric will keep you warm longer. It's up to you.</p>
-                </li>
-                <li class="aboutus__item">
-                        <h2 class="aboutus__value__title">Social</h2>
-                        <p class="aboutus__value__text">We focus on quality because we consider it to be extremely important. By ensuring this, we are confident that our products will live longer than any ordinary products. By lasting longer, our fabric will keep you warm longer. It's up to you.</p>
-                </li>
-            </ul>
+            <div class="aboutus__list-container">
+                <ul class="aboutus__list">
+                    <li class="aboutus__item">
+                            <h2 class="aboutus__value__title">Quality</h2>
+                            <p class="aboutus__value__text">We focus on quality because we consider it to be extremely important. By ensuring this, we are confident that our products will live longer than any ordinary products. By lasting longer, our fabric will keep you warm longer. It's up to you.</p>
+                    </li>
+                    <li class="aboutus__item">
+                            <h2 class="aboutus__value__title">Ecology</h2>
+                            <p class="aboutus__value__text">We focus on quality because we consider it to be extremely important. By ensuring this, we are confident that our products will live longer than any ordinary products. By lasting longer, our fabric will keep you warm longer. It's up to you.</p>
+                    </li>
+                    <li class="aboutus__item">
+                            <h2 class="aboutus__value__title">Social</h2>
+                            <p class="aboutus__value__text">We focus on quality because we consider it to be extremely important. By ensuring this, we are confident that our products will live longer than any ordinary products. By lasting longer, our fabric will keep you warm longer. It's up to you.</p>
+                    </li>
+                </ul>
+            </div>
             <p class="aboutus__link">>>></p>
         </div>
     </div>
