--- a/src/content/pages/about.njk
+++ b/src/content/pages/about.njk
@@ -13,12 +13,15 @@ permalink: /about.html
                     About Us
                 </h1>
             </div>
-            <div class="au__value__subtitle-container">
-                <p class="au__subtitle au__value__subtitle slideRightInit">Our Values</p>
-            </div>
-            <div class="au__value__text-container">
-                <p class="au__text au__value__text slideRightInit">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit. 
-                    Etiam dapibus, ante at varius condimentum, quam odio aliquam lectus, nec varius odio orci at massa. Phasellus turpis turpis, hendrerit at pharetra sed, dapibus ut odio.</p>
+            <div class="au__value__info slideRightInit
+            slideRightInit">
+                <div class="au__value__subtitle-container">
+                    <p class="au__subtitle au__value__subtitle ">Our Values</p>
+                </div>
+                <div class="au__value__text-container">
+                    <p class="au__text au__value__text ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit.
+                        Etiam dapibus, ante at varius condimentum, quam odio aliquam lectus, nec varius odio orci at massa. Phasellus turpis turpis, hendrerit at pharetra sed, dapibus ut odio.</p>
+                </div>
             </div>
             <div class="aboutus__list-container">
                 <ul class="aboutus__list">
