--- a/src/assets/scss/page/index.scss
+++ b/src/assets/scss/page/index.scss
@@ -260,7 +260,7 @@ FIRST SECTION
     font-size: 15vh;
     color: var(--color-green-200);
 
-    margin: 100px 0 0 50px;
+    margin: 150px 0 0 50px;
   }
   .firstsection__text{
 
@@ -273,7 +273,7 @@ FIRST SECTION
     position: absolute;
   
     max-width: 1100px;
-    margin: 60vh 0 0 72vh;
+    margin: 55vh 0 0 75vh;
   
     display: flex;
     flex-direction: column;
@@ -825,8 +825,14 @@ ABOUT US SECTION
   .aboutus__title{
     grid-area: 1 / 1 / 3 / 3;
   }  
-  .aboutus__text{
+  .aboutus__info{
     grid-area: 4 / 1 / 6 / 2;
+    max-width: 1300px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  .aboutus__text{
     margin: 0;
     max-width: 1300px;
   }
@@ -852,9 +858,9 @@ ABOUT US SECTION
     font-size: 6.8vh;
   }
   .aboutus__link{
-    margin-left: -750px;
-    margin-top: -20px;
-    grid-area: 5 / 2 / 5 / 3;
+    margin-block: 0;
+    text-align: right;
+    width: 100%;
   }
 }
 
