--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -52,7 +52,7 @@ permalink: /index.html
         </div>
         <div class="s-section__content cardsection slideFromTop">
             <div class="learn__card">
-                <h2 class="learn__title">Our cultur.</h2>
+                <h2 class="learn__title">Our culture.</h2>
                 <input type="checkbox" id="cultur" class="learn__input" checked>
                 <div open class="learn__details">
                     <div class="learn__summary anim__backgroundimg">
@@ -144,7 +144,10 @@ permalink: /index.html
             <h1 class="s-section__title">
                 About Us
             </h1>
-            <p class="aboutus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. <br> <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. </p>
+            <div class="aboutus__info">
+                <p class="aboutus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. <br> <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. </p>
+                <p class="aboutus__link">>>></p>
+            </div>
             <div class="aboutus__list-container">
                 <ul class="aboutus__list">
                     <li class="aboutus__item">
@@ -161,7 +164,6 @@ permalink: /index.html
                     </li>
                 </ul>
             </div>
-            <p class="aboutus__link">>>></p>
         </div>
     </div>
 
