contact page WIP

--- a/src/content/pages/about.njk
+++ b/src/content/pages/about.njk
@@ -13,8 +13,7 @@ permalink: /about.html
                     About Us
                 </h1>
             </div>
-            <div class="au__value__info slideRightInit
-            slideRightInit">
+            <div class="au__value__info slideRightInit">
                 <div class="au__value__subtitle-container">
                     <p class="au__subtitle au__value__subtitle ">Our Values</p>
                 </div>
