--- a/src/assets/scss/page/slick-street.scss
+++ b/src/assets/scss/page/slick-street.scss
@@ -24,29 +24,31 @@
 
 #a:checked ~ div .title{
 
-    animation: none 0.5s linear infinite;
+    animation: none 0.75s linear infinite;
     animation-play-state: paused;
 
 }
 
 #b:checked ~ div .title{
 
-    animation: squiggly-anim 0.5s linear infinite;
+    animation: squiggly-anim 0.75s linear infinite;
     animation-play-state: paused;
 }
 
 #c:checked ~ div .title{
     
-    animation: squiggly-anim 0.5s linear infinite;
+    animation: squiggly-anim 0.75s linear infinite;
     animation-play-state: running;
 
 }
 
 .selector {
 
-    margin-left: 400px;
+    position: fixed;
+    z-index: 20;
+    left: 45px;
+    bottom: 66px;
 
-    position: relative;
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
@@ -54,6 +56,8 @@
 
     width: 28px;
     height: 145px;
+
+    background-color: var(--color-green-300);
 
 }
 
@@ -72,7 +76,7 @@
     height: 9px;
     border-radius: 9px;
 
-    background-color: red;
+    background-color: var(--color-green-500);
 
 
 }
@@ -87,6 +91,9 @@
     font-size: 18px;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
+    color: var(--color-green-500);
+
+    display: none;
 
 }
 
