--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -32,11 +32,11 @@ permalink: /index.html
     </div>
 
     <div class="s-section s-section__green">
-        <div class="s-section__number">
+        <div class="s-section__number ss-number">
             <p>01</p>
         </div>
         <div class="s-section__content">
-            <h1 class="s-section__title">
+            <h1 class="s-section__title ss-title">
                 Ardennes
             </h1>
             <div class="firstsection__year">
@@ -97,15 +97,15 @@ permalink: /index.html
     </div>
 
     <div class="s-section">
-        <div class="s-section__number">
+        <div class="s-section__number ss-number">
             <p>02</p>
         </div>
         <div class="s-section__content shopsection">
-            <h1 class="s-section__title">
+            <h1 class="s-section__title ss-title">
                 Shop
             </h1>
             <div class="shopsection__content">
-                <h2 class="shopsection__title">Our Selection</h2>
+                <h2 class="shopsection__title ss-title">Our Selection</h2>
                 <p class="shopsection__text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br><br> Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br><br> Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. 
                 </p>
@@ -137,11 +137,11 @@ permalink: /index.html
     </div>
 
     <div class="s-section s-section__green">
-        <div class="s-section__number">
+        <div class="s-section__number ss-number">
             <p>03</p>
         </div>
         <div class="s-section__content aboutus">
-            <h1 class="s-section__title">
+            <h1 class="s-section__title ss-title">
                 About Us
             </h1>
             <p class="aboutus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. <br> <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. </p>
