SMS fixes about input ids

--- a/src/_includes/partials/mainnav.njk
+++ b/src/_includes/partials/mainnav.njk
@@ -5,13 +5,13 @@
             <div class="mainnav__element  mainnav__slickStreet">
               <div class="slickStreet__container">
                     <div class="slickStreet__content">
-                      <label class="selector__label" for="a">
+                      <label class="selector__label" for="slick">
                           <div class="selector__div"></div>
                       </label>
-                      <label class="selector__label" for="b">
+                      <label class="selector__label" for="mix">
                           <div class="selector__div"></div>
                       </label>
-                      <label class="selector__label" for="c">
+                      <label class="selector__label" for="street">
                           <div class="selector__div"></div>
                       </label>
                       <svg class="selector__star" width="28" height="145" viewBox="0 0 28 145" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -59,8 +59,8 @@
           </div>
         </div>
 
-        <input type="radio" id="a" name="1">
-        <input type="radio" id="b" name="1">
-        <input type="radio" id="c" name="1">
+        <input class="slickStreet__input" type="radio" id="slick" name="1">
+        <input class="slickStreet__input" type="radio" id="mix" name="1">
+        <input class="slickStreet__input" type="radio" id="street" name="1">
 
       {% endblock %}
