--- a/src/assets/scss/partials/mainnav.scss
+++ b/src/assets/scss/partials/mainnav.scss
@@ -67,6 +67,15 @@
 
     padding: 12px;
 
+    transform: rotate(0deg);
+
+}
+
+.mainnav__label {
+    
+    width: 100%;
+    height: 100%;
+
 }
 
 .mainnav__button {
@@ -205,6 +214,25 @@
 
 }
 
+/* ====== INPUT ======= */
+
+.mainnav__input {
+    display: none;
+}
+
+.mainnav__input:checked + .mainnav__hidden {
+
+    left: 0;
+
+}
+
+.mainnav:has(.mainnav__input:checked) .mainnav__star img {
+
+    transform: rotate(135deg);
+
+}
+
+
 // =========================
 //       SIDE SCROLL
 // =========================
@@ -312,6 +340,7 @@
     
     }
 
+
     .mainnav__button {
 
         transition: all 0.2s ease;
@@ -328,10 +357,11 @@
 
         cursor: pointer;
         background-color: var(--color-green-400);
-
+        
         img {
-
-            transform: scale(1.1) rotate(-90deg);
+            
+            cursor: pointer;
+            transform: scale(1.1);
 
         }
 
@@ -426,6 +456,15 @@
         margin-inline: 60px;
 
     }
+
+    /* ====== INPUT ======= */
+    
+    .mainnav__input:checked + .mainnav__hidden {
+
+        left: 120px;
+
+    }
+
 
 }
 
