--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -12,7 +12,7 @@
                 <li class="footer__item">
                     <h2 class="footer__item__title">Contact</h2>
                     <ul class="footer__item__list">
-                        <a href="" class="footer__item__info"><li>Available 24/7</li></a>
+                        <a href="contact.html" class="footer__item__info"><li>Available 24/7</li></a>
                         <a href="" class="footer__item__info"><li>info@mate</li></a>
                         <a href="" class="footer__item__info"><li>04 123 456 78</li></a>
                     </ul>
