--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,6 +11,7 @@
 @import "partials/mainnav.scss";
 @import "partials/footer.scss";
 
+@import "page/contact.scss";
 @import "page/index.scss";
 @import "page/shop.scss";
 @import "page/product.scss";
