--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -74,7 +74,7 @@ permalink: /index.html
                 <h2 class="learn__title">We focus on quality.</h2>
                 <input type="checkbox" id="quality" class="learn__input" checked>
                 <div open class="learn__details">
-                    <div class="learn__summary anim__backgroundimg" style="background-image: url(../../assets/img/ardennesQuality.JPG)">
+                    <div class="learn__summary learn__summary2 anim__backgroundimg">
                         <label for="quality" class="learn__label">
                             <img src="../../assets/img/Mate_Star_Green.svg" alt="">
                         </label>
