--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -8,7 +8,7 @@ permalink: /index.html
 
     <div class="s-section">
         <div class="s-section__content landPage">
-            <div class="landPage__imgSection anim__backgroundimg">
+            <div class="landPage__imgSection a-img__parallax">
                 <img src="../../assets/img/Mate_Logo_White.svg" alt="Mate's Logo" class="o-fluidimg landPage__logoHidden">
             </div>
             <img src="../../assets/img/Mate_Logo_White.svg" alt="Mate's Logo" class="o-fluidimg landPage__logo">
@@ -50,12 +50,12 @@ permalink: /index.html
                 <p class="firstsection__text-link">>>></p>
             </div>
         </div>
-        <div class="s-section__content cardsection slideFromTop">
+        <div class="s-section__content cardsection a-slide__bottom">
             <div class="learn__card">
                 <h2 class="learn__title">Our cultur.</h2>
                 <input type="checkbox" id="cultur" class="learn__input" checked>
                 <div open class="learn__details">
-                    <div class="learn__summary anim__backgroundimg">
+                    <div class="learn__summary a-img__parallax">
                         <label for="cultur" class="learn__label">
                             <img src="../../assets/img/Mate_Star_Green.svg" alt="">
                         </label>
@@ -69,12 +69,12 @@ permalink: /index.html
                 </div>
             </div>
         </div>
-        <div class="s-section__content cardsection slideFromBottom">
+        <div class="s-section__content cardsection a-slide__top">
                     <div class="learn__card">
                 <h2 class="learn__title">We focus on quality.</h2>
                 <input type="checkbox" id="quality" class="learn__input" checked>
                 <div open class="learn__details">
-                    <div class="learn__summary anim__backgroundimg" style="background-image: url(../../assets/img/ardennesQuality.JPG)">
+                    <div class="learn__summary a-img__parallax" style="background-image: url(../../assets/img/ardennesQuality.JPG)">
                         <label for="quality" class="learn__label">
                             <img src="../../assets/img/Mate_Star_Green.svg" alt="">
                         </label>
@@ -88,7 +88,7 @@ permalink: /index.html
                 </div>
             </div>
         </div>
-        <div class="s-section__content learnmore anim__backgroundimg">
+        <div class="s-section__content learnmore a-img__parallax">
             <div class="learnmore__button">
                 <p>Learn More</p>
                 <img src="../../assets/img/Mate_Star_Green.svg" alt="">
