--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -24,7 +24,7 @@
 
     </div>
 
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+<svg style="display: none;" xmlns="http://www.w3.org/2000/svg" version="1.1">
   <defs>
     <filter id="squiggly-0">
       <feTurbulence id="turbulence" baseFrequency="0.005" numOctaves="3" result="noise" seed="0"/>
