--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,5 +1,5 @@
     <div class="s-section lastsection">
-        <div class="s-section__content footersection">
+        <div class="s-section__content s-footersection">
             <ul class="footer__list">
                 <li class="footer__item">
                     <h2 class="footer__item__title">Company</h2>
