--- a/src/assets/scss/partials/footer.scss
+++ b/src/assets/scss/partials/footer.scss
@@ -4,7 +4,7 @@ FOOTER SECTION
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++
 */
 
-.footersection {
+.s-footersection {
 
   border-top: 1px solid var(--color-green-300);
 
@@ -44,7 +44,7 @@ FOOTER SECTION
   }
   
   @media all and (min-width:745px){
-    .footersection{
+    .s-footersection{
       margin: 0 100px;
     }
   }
@@ -55,7 +55,7 @@ FOOTER SECTION
       display: none;
     }
   
-    .footersection{
+    .s-footersection{
       width: max-content;
       border-top: 0px solid var(--color-green-300);
     }
