--- a/src/content/pages/shop.njk
+++ b/src/content/pages/shop.njk
@@ -139,12 +139,12 @@ permalink: /shop.html
                 <p class="firstsection__text-link">>>></p>
             </div>
         </div>
-        <div class="s-section__content cardsection slideFromTop">
+        <div class="s-section__content cardsection a-slide__bottom">
             <div class="learn__card">
                 <h2 class="learn__title">Our cultur.</h2>
                 <input type="checkbox" id="cultur" class="learn__input" checked>
                 <div open class="learn__details">
-                    <div class="learn__summary anim__backgroundimg">
+                    <div class="learn__summary a-img__parallax">
                         <label for="cultur" class="learn__label">
                             <img src="../../assets/img/Mate_Star_Green.svg" alt="">
                         </label>
@@ -158,12 +158,12 @@ permalink: /shop.html
                 </div>
             </div>
         </div>
-        <div class="s-section__content cardsection slideFromBottom">
+        <div class="s-section__content cardsection a-slide__top">
                     <div class="learn__card">
                 <h2 class="learn__title">We focus on quality.</h2>
                 <input type="checkbox" id="quality" class="learn__input" checked>
                 <div open class="learn__details">
-                    <div class="learn__summary anim__backgroundimg" style="background-image: url(../../assets/img/ardennesQuality.JPG)">
+                    <div class="learn__summary a-img__parallax" style="background-image: url(../../assets/img/ardennesQuality.JPG)">
                         <label for="quality" class="learn__label">
                             <img src="../../assets/img/Mate_Star_Green.svg" alt="">
                         </label>
@@ -177,7 +177,7 @@ permalink: /shop.html
                 </div>
             </div>
         </div>
-        <div class="s-section__content learnmore anim__backgroundimg">
+        <div class="s-section__content learnmore a-img__parallax">
             <div class="learnmore__button">
                 <p>Learn More</p>
                 <img src="../../assets/img/Mate_Star_Green.svg" alt="">
